# sammiazaki.github.io

./: .gitignore  CLAUDE.md  Makefile  README.md  index.html  interactive_ci_overlap_tutorial.jsx  package-lock.json  package.json  tailwind.config.js  vite.config.js
.claude/: README.md
.claude/agent-memory/tutorial-scaffolder/: MEMORY.md  project_tutorial_patterns.md
.claude/agents/: content-writer.md  math-checker.md  quiz-writer.md  tutorial-scaffolder.md  viz-designer.md
.claude/commands/: fetch-reference.md  review-tutorial.md
.claude/hooks/: check-registry.sh  pre-commit-build.sh
.github/workflows/: deploy.yml
drafts/: complexity-theory-post.md
notebooks/: 01_selection_bias.py  02_did.py  03_collider_bias.py  04_rdd_diagnostics.py  05_iv_2sls.py  06_uplift.py  07_causal_inference_overview.py  build_index.py  custom.css  pyproject.toml
notebooks/__marimo__/session/: 01_selection_bias.py.json  02_did.py.json  03_collider_bias.py.json  04_rdd_diagnostics.py.json  05_iv_2sls.py.json  06_uplift.py.json  07_causal_inference_overview.py.json
public/: 404.html  robots.txt  sitemap.xml
scripts/: generate-sitemap.mjs
src/: App.jsx  index.css  main.jsx
src/components/: ScrollToTop.jsx
src/components/butterfly/: Butterfly.jsx  ButterflyDuet.jsx  index.js
src/components/tutorial/: CodeBlock.jsx  InfoBox.jsx  LabeledSlider.jsx  QuizCard.jsx  StatCard.jsx  Tex.jsx  (+3 more)
src/layouts/: BlogLayout.jsx
src/lib/: seo.js
src/pages/: About.jsx  Anime.jsx  Chalkboard.jsx  Home.jsx  Noodlelab.jsx  NotFound.jsx  TutorialPage.jsx
src/tutorials/: registry.js
(+13 files in other folders)
