[project]
name = "notebooks"
version = "0.1.0"
description = "Marimo notebooks for exploring causal inference methods with real data"
requires-python = ">=3.13"
dependencies = [
    "causaldata>=0.1.5",
    "linearmodels>=7.0",
    "marimo>=0.23.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "rdrobust>=1.3.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "ucimlrepo>=0.0.7",
]

[dependency-groups]
dev = [
    "altair>=6.0.0",
    "duckdb",
    "mcp>=1",
    "nbformat>=5.10.4",
    "openai>=2.31.0",
    "polars[pyarrow]",
    "pydantic>=2",
    "pytest>=9.0.3",
    "python-lsp-ruff>=2.3.1",
    "python-lsp-server>=1.14.0",
    "ruff",
    "sqlglot",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.9.0.post1",
    "websockets>=16.0",
]
